--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -11,7 +11,7 @@ padding-bottom: 1rem;
 .title_wrapper{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     cursor: pointer;
 }
